Upgraded TheseFoolishThings to '4.0-ALPHA-3' and SteelBlue to '2.0-ALPHA-5'.